--- a/mangga/Cargo.toml
+++ b/mangga/Cargo.toml
@@ -11,12 +11,9 @@ repository.workspace = true
 readme.workspace = true
 
 [dependencies]
-async-graphql = "7.0.7"
-bson = { version = "2.11.0", features = ["chrono-0_4"] }
-chrono = "0.4.38"
-futures = "0.3.30"
+bson = "2.13.0"
 mangga-macro = { path = "../mangga-macro" }
-mongodb = "3.0.1"
-once_cell = "1.19.0"
-serde = "1.0.204"
-thiserror = "1.0.63"
+mongodb = "3.1.0"
+once_cell = "1.20.2"
+serde = { version = "1.0.210", features = ["derive"] }
+thiserror = "1.0.64"
