--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -18,4 +18,5 @@ dotenvy = "0.15.7"
 futures = "0.3.30"
 mangga = { path = "../mangga" }
 serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.132"
 tokio = { version = "1.39.2", features = ["full"] }
