--- a/mangga/Cargo.toml
+++ b/mangga/Cargo.toml
@@ -11,6 +11,7 @@ repository.workspace = true
 readme.workspace = true
 
 [dependencies]
+async-graphql = "7.0.11"
 bson = { version = "2.13.0", features = ["chrono-0_4"] }
 chrono = "0.4.38"
 futures = "0.3.31"
