--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -20,3 +20,4 @@ mangga = { path = "../mangga" }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.132"
 tokio = { version = "1.39.2", features = ["full"] }
+tracing = "0.1.41"
